Fix vertical-align

--- a/src/assets/styles/elements/checkbox.styl
+++ b/src/assets/styles/elements/checkbox.styl
@@ -1,5 +1,5 @@
 .checkbox
-  vertical-align 10%
+  vertical-align 11%
 
   &__self
     position relative
