--- a/src/assets/styles/elements/radio.styl
+++ b/src/assets/styles/elements/radio.styl
@@ -9,7 +9,7 @@
     border 1px solid
     border-radius 1em
     text-align center
-    vertical-align -10%
+    vertical-align -11%
     background-color white
 
   &__status
